--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@types/react-dom": "^16.0.4",
     "ajv": "4.11.2",
     "concurrently": "3.1.0",
-    "css-loader": "^1.0.0",
     "dotenv": "4.0.0",
     "dts-bundle": "0.7.2",
     "generate-json-webpack-plugin": "0.2.1",
@@ -55,8 +54,6 @@
     "karma-webpack": "2.0.2",
     "knockout": "3.4.0",
     "live-server": "1.2.0",
-    "mini-css-extract-plugin": "^0.4.3",
-    "node-sass": "4.9.2",
     "node-uuid": "1.4.7",
     "prettier": "~1.12.0",
     "puppeteer": "^1.0.0",
@@ -65,24 +62,27 @@
     "react-dom": "^16.2.0",
     "replace-in-file": "^3.1.1",
     "rimraf": "2.5.4",
-    "sass-loader": "^7.1.0",
     "standard-version": "4.0.0",
     "style-loader": "0.13.1",
     "surveyjs-doc-generator": "git+https://github.com/surveyjs/surveyjs-doc-generator.git",
     "testcafe": "0.15.0",
     "testcafe-browser-provider-saucelabs": "1.1.0",
-    "ts-loader": "^5.2.1",
     "ts-node": "3.3.0",
     "tslint": "4.5.1",
-    "typescript": "2.6.1",
-    "url-loader": "^0.6.2",
     "val-loader": "0.5.0",
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.2.0",
+    "vue": "^2.5.21",
+    "vue-class-component": "^6.0.0",
+    "vue-property-decorator": "^7.0.0",
+    "css-loader": "^2.1.0",
+    "mini-css-extract-plugin": "^0.4.3",
+    "node-sass": "^4.9.2",
+    "sass-loader": "^7.1.0",
+    "ts-loader": "^5.3.2",
+    "typescript": "^3.0.0",
+    "url-loader": "^1.1.2",
     "vue-loader": "^15.4.2",
-    "vue-property-decorator": "^7.2.0",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "4",
+    "webpack-cli": "^3.2.1"
   }
 }
