--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
     "rimraf": "2.5.4",
     "standard-version": "4.0.0",
     "style-loader": "0.13.1",
-    "surveyjs-doc-generator": "git+https://github.com/surveyjs/surveyjs-doc-generator.git",
-    "testcafe": "0.15.0",
+    "surveyjs-doc-generator":
+      "git+https://github.com/surveyjs/surveyjs-doc-generator.git",
+    "testcafe": "0.23.3",
     "testcafe-browser-provider-saucelabs": "1.1.0",
     "ts-node": "3.3.0",
     "tslint": "4.5.1",
